@@ -33,7 +33,6 @@ function generatePrettyUrl($text)
 		'degrees'	=>	array ('°'),
 		'dh'	=>	array ('ذ'),
 		'do'	=>	array ('ど', 'ド'),
-		'dollar'	=>	array ('$'),
 		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę', 'е', 'Е', 'ё', 'Ё', 'э', 'Э', 'Ẹ', 'ẹ', 'Ẻ', 'ẻ', 'Ẽ', 'ẽ', 'Ề', 'ề', 'Ế', 'ế', 'Ệ', 'ệ', 'Ể', 'ể', 'Ễ', 'ễ', 'え', 'エ'),
 		'f'	=>	array ('f', 'F', 'ф', 'Ф', 'ﻑ'),
 		'fu'	=>	array ('ふ', 'フ'),
@@ -134,8 +133,9 @@ function generatePrettyUrl($text)
 		'~'	=>	array ('~'),
 		'*'	=>	array ('*'),
 		"\\'"	=>	array ("'", '"', 'ﺀ', 'ع'),
-		'('	=>	array ('('),
-		')'	=>	array (')'),
+		'('	=>	array ('(', '{', '['),
+		')'	=>	array (')', '}', ']'),
+		'$'	=>	array ('$'),
 		'0'	=>	array ('0'),
 		'1'	=>	array ('1', '¹'),
 		'2'	=>	array ('2', '²'),
